<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shopping App</string>
    <string name="cart_title">Cart</string>
    <string name="my_cart_title">My Cart</string>
    <string name="product_title">Product</string>
    <string name="success_title">Successfully</string>

    <string name="start_shopping">Start Shopping</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="place_order">Place Order</string>
    <string name="continue_shopping">Continue Shopping</string>

    <string name="product_name">Oil</string>
    <string name="product_description">This Product Is Very Important And Most Seller</string>
    <string name="product_long_description">Discusses The Factors That Make A Logo Successful By Analyzing The Research, Brainstorming, Sketching, And Stylistic Experiments That Led To Its Development</string>

    <string name="official_store">official store</string>
    <string name="free_delivery">free delivery</string>
    <string name="offers">Offers</string>
    <string name="various_installment">Various Installment Options</string>
    <string name="monthly_installment">Monthly Installment</string>
    <string name="jumia_birthday">Jumia Birthday</string>

    <string name="subtotal">Subtotal (%d items)</string>
    <string name="total">Total</string>
    <string name="search_hint">search</string>

    <string name="order_success_message">Your Order Was Successful!</string>
</resources>
